--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cli-ic-ajax": "^0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-moment-shim": "0.6.1",
+    "ember-cli-nwjs": "0.3.7",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "3.1.0",
@@ -46,6 +47,12 @@
     "ember-export-application-global": "^1.0.3",
     "ember-i18n": "4.1.4",
     "ember-moment": "3.5.1",
-    "emberx-select": "2.0.1"
+    "emberx-select": "2.0.1",
+    "nw": "0.12.3"
+  },
+  "main": "dist/index.html",
+  "window": {
+    "width": 960,
+    "height": 600
   }
 }
