--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "main": "dist/index.html",
   "window": {
     "width": 980,
-    "height": 770
+    "height": 770,
+    "toolbar": false
   }
 }
